[package]
name = "solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
hex = "0.4.2"
num-bigint = "0.4.0"
num-traits = "0.2.14"
